イベント作成画面のOnly womanのチェックボックス修正

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="mb-3">
     <%= f.label :only_woman %>
-    <%= f.check_box :only_woman %>
+    <%= f.check_box :only_woman, {}, "チェックあり", "チェックなし" %>
   </div>
   <div class="mb-3">
     <%= f.label :thumbnail %>
