ユーザーのプロフィールに性別が表示されるように変更

--- a/app/views/mypage/shared/_user_info.html.erb
+++ b/app/views/mypage/shared/_user_info.html.erb
@@ -16,6 +16,7 @@
             <%= current_user.name %>
           </h2>
           <p class="mb-0 d-block"><%= current_user.email %></p>
+          <p><%= current_user.gender_i18n %></p>
         </div>
       </div>
     </div>
