--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.label :prefecture_id %>
     <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {}, class: 'form-select' %>
   </div>
-  <% if current_user.gender == "women" %>
+  <% if current_user.gender == "woman" %>
     <div class="mb-3">
       <%= f.label :only_woman %>
       <%= f.check_box :only_woman, {}, "女性限定", "限定なし" %>
