--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -45,7 +45,7 @@
         </div>
         <div class="card-body">
           <%= simple_format @event.content %>
-          <% if @event.only_woman == "女性限定" %>
+          <% if @event.only_woman? %>
             <%= @event.only_woman_i18n %>
           <% end %>
         </div>
