--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -96,8 +96,8 @@
                               data: { confirm: 'キャンセルします' }
                   %>
                 <% else %>
-                  <% if @event.only_woman == "女性限定" %>
-                    <% if current_user.gender == "woman" %>
+                  <% if @event.only_woman? %>
+                    <% if current_user.woman? %>
                       <%= link_to 'このもくもく会に参加する',
                                   event_attendance_url(@event),
                                   class: 'btn btn-primary',
